--- a/6épiloguebilingue.tex
+++ b/6épiloguebilingue.tex
@@ -34,7 +34,7 @@
                     State paullulum   obsecro ﻿\ampersand\ quantum in multorum cosiliis frugis extet perdiscite. 
                     Vetus est sententia, Neminem unum omnia noscere, ﻿\ampersand\ hoc itidem percelebratum. 
                     Sape etiam est olitor valde oportuna locutus. 
-                    Parasitum me noscitis Lichenora, qui Parasitando multis iam annis ventrem pavi neum, ﻿\ampersand\ alienum cibum ceu musculus quidam semper edi, nullorum edacitate unquam victus, vestibusque ut videtis non plane sumptuosis, nec plane sordidis amictus. 
+                    Parasitum me noscitis Lichenora, qui Parasitando multis iam annis ventrem pavi meum, ﻿\ampersand\ alienum cibum ceu musculus quidam semper edi, nullorum edacitate unquam victus, vestibusque ut videtis non plane sumptuosis, nec plane sordidis amictus. 
                     Qui consiliis haud quaquam malis, levi adolescentiae saepe suppetiatum affui. 
                     En ego si nemo ex vobis aliud est dicturus, quid sentiam ipse eloquar, esto non multum amplius loci mea sententia, habitura sit, propterea quod absunt partes, dicam tamen quod dicturus antea fueram, quan quam me fortassis ut hominem semissem, nihil ad rem dicere posse, existiment non nulli. 
                     Non enim baraba, nec pallio, nec pallore in faciem inducto Cimino, prudentiam ostento, id quod solent multi, Sed Lichenora me ﻿\ampersand\ ore ﻿\ampersand\ habitu profiteor, quid mihi abscondita, intra calviciem, ﻿\ampersand\ calvam hanc calvariam, mea mens, secum saepe mussitet, non omnibus est in aperto. 
