--- a/4dialoguebilingue.tex
+++ b/4dialoguebilingue.tex
@@ -21,7 +21,7 @@
             Université de Neuchâtel, CLAM\\
             C. Aeby, N. Aeby, M. Cario, M. Durham,\\ 
             P. Jacsont, S. Moy, I. Muminovic, É. Paupe,\\
-            J. R. Ribeiro da Silva, R. Richard. P. Schwab}
+            J. Rafael Ribeiro da Silva, R. Richard. P. Schwab}
         \date{Semestre de printemps 2020}
         
         \maketitle
@@ -31,49 +31,63 @@
         \beginnumbering 
             \pstart\section*{Parasceue, Instituendae concordiae collocutores.}\pend\pstart\subsection*{ Philonicus Euthymus Nomothetes}\pend\pstart\textbf{Philonicus }\hspace{1cm} Audistis hactenus, Spectatores, ephebi, \edtext{grandævi}{\Afootnote{grandevi}} ﻿\ampersand\ medioximi: me narrante 
             breviter, Euthymo vero longissime ﻿\ampersand\ fastidiosissime, quid Gallinae desiderent, quid Galli reponant:
-            sive potius Euthymus, qui de Gallis ea \edtext{rettulit}{\Afootnote{retulit}}, quae ne ipsi quidem sciunt, ﻿\ampersand\ si scirent \edtext{numquam}{\Afootnote{ne unquam}} crederent.\pend\pstart\textbf{Euthymus  }\hspace{1cm} Audistis inquam Spectatores quam inique gallinae accusarint, \edtext{quamquam}{\Afootnote{quanquam}} pertinenter, argumentis evidentibus, ﻿\ampersand\ indiciis plus quam veris galli se me Patrono
-            purgarint. Qui etsi ea quae dicta sunt: aut proposita per Philonicum nequaquam dictum iri putarunt, Propterea, quod aliter sensurum amo
-            rem, aliter fidem, aliter conjugium credidere, Suspicati tamen \edtext{pleraque}{\Afootnote{plaeraque}} eas injuriae loco habituras me purgationis ﻿\ampersand\ defensionis
+            sive potius Euthymus, qui de Gallis ea \edtext{rettulit}{\Afootnote{retulit}}, quae ne ipsi quidem sciunt, ﻿\ampersand\ si scirent \edtext{numquam}{\Afootnote{ne unquam}} crederent.\pend\pstart\textbf{Euthymus  }\hspace{1cm} Audistis inquam Spectatores quam inique Gallinae accusarint, \edtext{quamquam}{\Afootnote{quanquam}} pertinenter, argumentis evidentibus, ﻿\ampersand\ indiciis plus quam veris galli se me Patrono
+            purgarint. Qui etsi ea quae dicta sunt: aut proposita per Philonicum nequaquam dictum iri putarunt, Propterea, quod aliter sensurum amorem, aliter fidem, aliter conjugium credidere, 
+            suspicati tamen \edtext{pleraque}{\Afootnote{plaeraque}} eas injuriae loco habituras me purgationis ﻿\ampersand\ defensionis
             provinciam ita subire volvere, ut nihil præterirem eorum, quae ad gloriam suam pertinere viderentur, quod quidem pro virili perfeci, respondendo
-            magis, qua retaxando, multa enim consulto prætermissa sunt, quae 
+            magis quam retaxando, multa enim consulto prætermissa sunt, quae 
             vehementibus verborum aculeis ex officio prosequi potuissem, si
-            me adcrescentis orationis vastitas non absterruisset, Magis igitur
-            tibi Philo. temeritatis culpa tribuenda est, quam mihi longitudinis, 
-            Potest, ingens maledicentia, paucissimis verbis comprehendi, \edtext{immo}{\Afootnote{imo}}
-            quinque tantum litteris ut si dixero, Fures? amoveri aut ﻿\ampersand\ expungi paucis non potest.\pend\pstart\textbf{Philonicus }\hspace{1cm} Saepe in me maledicentiam, tu vaniloquentia notas, an non tu vaniloquus es potius, quod me bonam 
-            operam pro virili navantem, maledictum dicere falso audes, \edtext{Vide, sis,}{\Afootnote{Videsis}}
-            Euthyme, ﻿\ampersand\ cognoscens loquitor, instituam ego (mihi crede) isti
-            tuae tam inverecundae petulantiae, alio in loco ultionem.\pend\pstart\textbf{Euthymus }\hspace{1cm} Heus Spectatores non est satis a Philonico, tot falso Gallis esse \edtext{ascripta}{\Afootnote{asscripta}}, 
-            nisi etiam in Euthymo libidinem \edtext{exsaturet}{\Afootnote{exaturet}}: minans ipse aliam iam nunc
-            aliarum injuriarum actionem instituit, Pergamus obsecro Philonice ne gallorum ﻿\ampersand\ gallinarum obliti, in alius causae luctam acerbiorem deveniamus\pend\pstart\textbf{Philonicus }\hspace{1cm} ﻿\ampersand\ istud mihi adprime placet, \edtext{quamquam}{\Afootnote{quanquam}} te monitum velim, ut horum quae in me dixisti memor sis, ego enim ea non intermittam, nec ut sepulta præteribo.\pend\pstart\textbf{Euthymus }\hspace{1cm} Dicite ergo Spectores ut estis hortati, ﻿\ampersand\ sententiam pronuntiate, novistis insontissimos Gallos.\pend\pstart\textbf{Philonicus }\hspace{1cm} Dicite obsecro Spectores optimi, novistis optimas ﻿\ampersand\ insontissimas Gallinas.\pend\pstart\textbf{Euthymus }\hspace{1cm} Eheu quid tacetis, ita enim utra pars occubuerit, haud promptum erit \edtext{intellegere}{\Afootnote{intelligere}}.\pend\pstart\textbf{Philonicus }\hspace{1cm} Eia age, profemini, quod vobis est in animo, reique finem date, fastidiosa est illa in re satis proposita, satisque clara, cunctatio.\pend\pstart\textbf{Euthymus }\hspace{1cm} Tacere omnes sentis, mussare, tamen vides, ﻿\ampersand\ conari quicquam \edtext{nonnullos}{\Afootnote{non nullos}}. 
-                    Quod si unus verba faceret primus, plures sensum essemus audituri. 
-                    Etenim, cum respondere omnes nequeant. singuli eum qui primus loqui audeat, expectant: 
-                    quem tandem ordientem, certatim urgere ﻿\ampersand\ impellere (ut saepe in coetu sit) reliqui multitudo solet.\pend\pstart\textbf{Philonicus }\hspace{1cm} Ego te Nomothetes, cum prudentissimis quibusque consiliorum acumine par sis, tam 
-            diu tacere, attente audientem, admodum miror, Effare obsecro, 
-            quod \edtext{felix}{\Afootnote{foelix}} faustumque fiet ut et alii aut in tu sententia conquiescant, aut
-            ad dicendum invitati, quae animo concepere, proloquantur, nosque \edtext{cumprimis}{\Afootnote{cum primis}}  
-            quid sentias, non ignoremus, Amas tu quidem, ut scio, Gallinas, ﻿\ampersand\ Ornithoboscia frequentissima, ea villa fovet, quam nuper ad 
-            suburbanum, \edtext{exædificasti}{\Afootnote{exedificasti}}.\pend\pstart\textbf{Euthymus }\hspace{1cm} Salva res est, eloquente Nomothete potest enim \edtext{ceteris}{\Afootnote{coeteris}} qui assunt, recte sentiendi exemplum, praebere. 
-                    Dicito ergo mi Nomothetes, et ordire faustiter.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quia me Philonice, tuque Euthyme, adeo ut primus eloquar: 
+            me adcrescentis orationis vastitas non absterruisset. 
+            Magis igitur tibi Philonice temeritatis culpa tribuenda est, quam mihi longitudinis. 
+            Potest ingens maledicentia paucissimis verbis comprehendi, 
+                    \edtext{immo}{\Afootnote{imo}}
+            quinque tantum litteris ut si dixero: "Fur es!" amoveri aut ﻿\ampersand\ expungi paucis non potest.\pend\pstart\textbf{Philonicus }\hspace{1cm} Saepe in me maledicentiam, tu vaniloquentia notas, an non tu vaniloquus es potius, quod me bonam 
+            operam pro virili navantem, maledictum dicere falso audes. 
+                    \edtext{Vide, sis,}{\Afootnote{Videsis}}
+            Euthyme, ﻿\ampersand\ cognoscens loquitor, instituam ego (mihi crede) isti tuae tam inverecundae petulantiae, alio in loco ultionem.\pend\pstart\textbf{Euthymus }\hspace{1cm} Heus Spectatores non est satis a Philonico tot falso Gallis esse \edtext{ascripta}{\Afootnote{asscripta}}, 
+            nisi etiam in Euthymo libidinem \edtext{exsaturet}{\Afootnote{exaturet}}. 
+            Minans ipse aliam iam nunc
+            aliarum injuriarum actionem instituit. Pergamus, obsecro Philonice, ne gallorum ﻿\ampersand\ gallinarum obliti, in alius causae luctam acerbiorem deveniamus.\pend\pstart\textbf{Philonicus }\hspace{1cm} ﻿\ampersand\ istud mihi adprime placet, \edtext{quamquam}{\Afootnote{quanquam}} te monitum velim, ut horum quae in me dixisti memor sis, ego enim ea non intermittam, nec ut sepulta præteribo.\pend\pstart\textbf{Euthymus }\hspace{1cm} Dicite ergo Spectores ut estis hortati, ﻿\ampersand\ sententiam pronuntiate, novistis insontissimos Gallos.\pend\pstart\textbf{Philonicus }\hspace{1cm} Dicite obsecro Spectores optimi, novistis optimas ﻿\ampersand\ insontissimas Gallinas.\pend\pstart\textbf{Euthymus }\hspace{1cm} Eheu quid tacetis? 
+                    Ita enim utra pars occubuerit, haud promptum erit \edtext{intellegere}{\Afootnote{intelligere}}.\pend\pstart\textbf{Philonicus }\hspace{1cm} Eia age! 
+                    Profemini quod vobis est in animo reique finem date. 
+                    Fastidiosa est illa in re satis proposita satisque clara cunctatio.\pend\pstart\textbf{Euthymus }\hspace{1cm} Tacere omnes sentis. 
+                    Mussare tamen vides ﻿\ampersand\ conari quicquam \edtext{nonnullos}{\Afootnote{non nullos}}. 
+                    Quod si unus verba faceret primus, plures sensim essemus audituri. 
+                    Etenim, cum respondere omnes nequeant, singuli eum qui primus loqui audeat, expectant: 
+                    quem tandem ordientem certatim urgere ﻿\ampersand\ impellere, ut saepe in coetu sit, reliqua multitudo solet.\pend\pstart\textbf{Philonicus }\hspace{1cm} Ego te, Nomothetes, cum prudentissimis quibusque consiliorum acumine par sis, tam 
+            diu tacere, attente audientem admodum miror. 
+                    Effare obsecro 
+            quod \edtext{felix}{\Afootnote{foelix}} faustumque fiet 
+                    ut et alii aut in tua sententia conquiescant aut
+            ad dicendum invitati, quae animo concepere, proloquantur nosque \edtext{cumprimis}{\Afootnote{cum primis}}  
+            quid sentias non ignoremus. 
+                    Amas tu quidem, ut scio, Gallinas ﻿\ampersand\ Ornithoboscia frequentissima ea villa fovet quam nuper ad 
+            suburbanum \edtext{exædificasti}{\Afootnote{exedificasti}}.\pend\pstart\textbf{Euthymus }\hspace{1cm} Salva res est. Eloquente Nomothete potest enim \edtext{ceteris}{\Afootnote{coeteris}} qui assunt, recte sentiendi exemplum, praebere. 
+                    Dicito ergo, mi Nomothetes, et ordire faustiter.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quia me, Philonice tuque Euthyme, adeo ut primus eloquar 
                     quod sentio hortamini, duco non tacendum esse, maxime quod nullius
-                    sententia nostra opinione, praevertitur. Idque omnium maxime velim ut 
-                    Capos castratos in vestra illa disceptatione, Galli, Gallinaeque arbitros deligerent. 
+                    sententia nostra opinione, praevertitur. 
+                    Idque omnium maxime velim ut 
+                    Capos castratos in vestra illa disceptatione Galli Gallinaeque arbitros deligerent. 
                     Iudices enim esse non possunt cum sint Eunuchi, 
-                    id quod nostrarum legum sanctione, si bene sentio, \edtext{comprehensum}{\Afootnote{comprehenssum}} est, 
-                    Arbitri Hercle optime erunt ob communis amicitiae vinculum ﻿\ampersand\ mores utrisque multis annis examussim perspectos, 
-                    Et hoc etiam vocabulum, illo plus est honorum, 
-                    Nam arbitrorum officium, multo mansuetius, multoque in affinium ﻿\ampersand\ conjugum dissidiis \edtext{opportunius}{\Afootnote{oportunuis}}. 
+                    id quod nostrarum legum sanctione, si bene sentio, \edtext{comprehensum}{\Afootnote{comprehenssum}} est. 
+                    Arbitri, Hercle optime, erunt ob communis amicitiae vinculum ﻿\ampersand\ mores utriusque multis annis examussim perspectos, 
+                    Et hoc etiam vocabulum illo plus est honorum. 
+                    Nam arbitrorum officium multo mansuetius multoque in affinium ﻿\ampersand\ conjugum dissidiis \edtext{opportunius}{\Afootnote{oportunuis}}. 
                     Hos enim legum adeo non ligat severitas, quin multa possint pro partium commodo \edtext{mansuetissime}{\Afootnote{mansuetssime}} moderari. 
                     Illos autem officii rigor legumque dictamen non sinunt nisi cum incommodo quodam mites esse. 
-                    Praeterea, Odiosissimum est, pati iudicem qui nostri generis non sit, Ad sui 
-                    enim ordinis iudicem fugere debet legibus ﻿\ampersand\ natura promittentibus, 
-                    quisquis accusatur eumque sequatur, qui accusat oportet. 
-                    Quia igitur utraque pars, Caporum fidem vestris verbis imploravit, 
-                    quod ego \edtext{prae ceteris}{\Afootnote{praecaeteris}} iter audiendum animadverti, 
-                    quos alios commode praeter Capos, obsecro, instituetis Arbitros?\pend\pstart\textbf{Euthymus }\hspace{1cm} Hercle ita fieri desidero, ut Nomothetae placet, utque aliis ipsi annuentibus placere video. 
-                    Verum quis Caporum commodus interpres erit?\pend\pstart\textbf{Philonicus }\hspace{1cm} Prius quaerere, an Gallis, Gallinisque hoc ipsum sit placiturum Euthyme, his siquidem nolentibus nihil loci Nomothetae consulta obtinebunt.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quin igitur, quid velint rimamini?\pend\pstart\textbf{Philonicus }\hspace{1cm} iam rimabimur si placet Euthyme?\pend\pstart\textbf{Euthymus }\hspace{1cm} perplacet. Vos interim Spectatores Spectatores libero ﻿\ampersand\ hilaro animo eritis.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Video ego \edtext{me Dius Fidius}{\Afootnote{medius fidius}}, trisque acceptos esse Capos, nam utrique conivent ﻿\ampersand\ verbis quoque assentiuntur, verum revertentes audiamus.\pend\pstart\textbf{Philonicus }\hspace{1cm} Pulchre Gallinae sibi evenisse putant, quod Capos arbitros habiturae sunt.\pend\pstart\textbf{Euthymus }\hspace{1cm} Et pulcherrime Galli, nam Capi Galli aliquando fuere, Gallinae \edtext{numquam}{\Afootnote{nunquam}}.\pend\pstart\textbf{Philonicus }\hspace{1cm} Subi obsecro Nomothete, provinciam id eloquendi quod Capi volunt. 
-                    Nullum enim omnium scio qui majori ipsis familiaritate, inter \edtext{oriandum}{\Afootnote{ociandum}} junctus sit. 
-                    Enarra igitur eis prius rem omnem ut eam accepisti, ﻿\ampersand\ Democriti herba, qua multarum volucrum sermonem \edtext{intellegis}{\Afootnote{intelligis}}, gnaviter utere.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quia ita Patroni vultis ita agetur, verum immorandum est paulisper donec omnia explicem Capis, ﻿\ampersand\ quae rursum dicenda sint accipiam. 
+                    Praeterea odiosissimum est pati iudicem qui nostri generis non sit. 
+                    Ad sui enim ordinis iudicem fugere debet legibus ﻿\ampersand\ natura promittentibus, 
+                    quisquis accusatur eumque sequatur qui accusat oportet. 
+                    Quia igitur utraque pars Caporum fidem vestris verbis imploravit, 
+                    quod ego \edtext{prae ceteris}{\Afootnote{praecaeteris}} inter audiendum animadverti, 
+                    quos alios commode praeter Capos, obsecro, instituetis Arbitros?\pend\pstart\textbf{Euthymus }\hspace{1cm} Hercle ita fieri desidero, ut Nomothetae placet utque aliis ipsi annuentibus placere video. 
+                    Verum quis Caporum commodus interpres erit?\pend\pstart\textbf{Philonicus }\hspace{1cm} Prius quaerere an Gallis Gallinisque hoc ipsum sit placiturum, Euthyme, 
+                    his siquidem nolentibus nihil loci Nomothetae consulta obtinebunt.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quin igitur quid velint rimamini?\pend\pstart\textbf{Philonicus }\hspace{1cm} Iam rimabimur si placet Euthyme.\pend\pstart\textbf{Euthymus }\hspace{1cm} Perplacet. 
+                    Vos interim Spectatores libero ﻿\ampersand\ hilaro animo eritis.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Video ego \edtext{Medius Fidius}{\Afootnote{medius fidius Dius Fidius}}, utrisque acceptos esse Capos, 
+                    nam utrimque conivent ﻿\ampersand\ verbis quoque assentiuntur, verum revertentes audiamus.\pend\pstart\textbf{Philonicus }\hspace{1cm} Pulchre Gallinae sibi evenisse putant quod Capos arbitros habiturae sunt.\pend\pstart\textbf{Euthymus }\hspace{1cm} Et pulcherrime Galli. 
+                    Nam Capi Galli aliquando fuere, Gallinae \edtext{numquam}{\Afootnote{nunquam}}.\pend\pstart\textbf{Philonicus }\hspace{1cm} Subi, obsecro Nomothete, provinciam id eloquendi quod Capi volunt. 
+                    Nullum enim omnium scio qui majori ipsis familiaritate, inter \edtext{otiandum}{\Afootnote{ociandum}} junctus sit. 
+                    Enarra igitur eis prius rem omnem ut eam accepisti, ﻿\ampersand\ Democriti herba qua multarum volucrum sermonem \edtext{intellegis}{\Afootnote{intelligis}} gnaviter utere.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Quia ita Patroni vultis ita agetur, verum immorandum est paulisper donec omnia explicem Capis, ﻿\ampersand\ quae rursum dicenda sint accipiam. 
                     Vos interim Spectatores orate superos, ut Nomothetes \edtext{vester}{\Afootnote{voster}} ex Caporum Senatu id referat, 
                     quod pro pace ﻿\ampersand\ concordia, tantae discordiae prospere faxit.\pend 
         \endnumbering
@@ -82,7 +96,27 @@
 
         \begin{Rightside}
         \beginnumbering
-            \pstart\section*{Veille du sabbat. De la concorde devant être établie.}\pend\pstart\subsection*{ Philonicus Euthymus Nomothetes}\pend\pstart\textbf{Philonicus}\hspace{1cm} Jusque là, spectateurs, jeunes gens, vieillards et personnes d'âge moyen, vous avez entendu de moi brièvement, tandis qu'Euthymus raconte vraiment très longuement et fastidieusement, ce que les poules réclament, ce que les coqs répliquent. Ou, pour mieux dire, Euthymus, qui a rapporté les paroles des coqs, qu''ils ne connaissent d'ailleurs pas eux-mêmes, et s'ils les connaissaient ils ne s'y fieraient pas même une seule fois.\pend\pstart\textbf{Euthymus }\hspace{1cm} Vous avez écouté, dis-je, spectateurs, combien injustement les poules ont accusé, bien que d'une manière pertinente, par des arguments apparents, et combien plus les coqs se sont disculpés par des indications véridiques avec moi [comme] défenseur. Eux qui, malgré ces paroles qui ont été dites ou exposées par Philonicus, n'ont nullement cru une parole venant de lui (???), parce qu'ils ont cru autrement à l'amour ressenti, autrement à la loyauté, autrement au mariage. Ayant soupçonné cependant qu'elles [seraient] souvent sur le point d'avoir [gain de cause] en ce lieu d'injustice, ils résolurent ainsi de me proposer la charge de la justification et de la défense, pour que je n'omette rien de ceux-là, elles qui paraissent s'étendre jusqu'à sa gloire, que certes a été accompli en faveur des mâles, plus par le fait de répondre que par le fait de censurer. Beaucoup [de choses] en effet ont été omises délibérément, que j'aurais pu poursuivre hors de ma charge au moyen des piques véhémentes des paroles, si l'ampleur du discours s'accroissant ne m'en avait détourné. Donc à toi Philo, c'est plutôt la faute de l'irréflexion qui doit t'être attribuée, plutôt qu'à moi celle de la longueur. Il est possible, énorme médisance, de comprendre en très peu de mots, de moins de cinq lettres seulement, comme si je les avait récités. Est-tu fou ? En peu de mots il n'est pas possible de digresser ou de faire le tour du sujet.\pend\pstart\textbf{Philonicus }\hspace{1cm} Souvent en moi [est] la médisance, toi tu te démarques par tes paroles futiles. Est-ce que toi tu n'es pas futile plus que moi qui accompli avec soin un effort méritoire pour la gent masculine ? Tu oses dire faussement une médisance. Vois-tu, Euthymus, et je parle en connaissance de cause, moi, crois-moi, j'entreprendrai dans un autre lieu une vengeance pour ton effronterie là si impudente.\pend\pstart\textbf{Euthymus }\hspace{1cm} Holà, spectateurs, ce n'est pas assez venant de Philonicus, tant sont nombreuses les choses attribuées faussement aux coqs, excepté encore qu'il est rempli de jalousie envers Euthymus : se menaçant lui-même, il organise déjà maintenant une autre action [pour] d'autres injustices. Je supplie Philonicus pour que nous poursuivions sans oublier ni les coqs ni les poules, et pour que nous en venions à cette pénible lutte au cours d'un autre procès.\pend\pstart\textbf{Philonicus }\hspace{1cm} Et cela me plaît infiniment, bien que je veuille t'avertir pour que tu te rappelles de ce que tu as dit à mon sujet, moi en effet ces paroles je ne les interromprai pas, ni ne les omettrai à l'enterrement.\pend\pstart\textbf{Euthymus }\hspace{1cm} Dites donc, spectateurs, comme vous y êtes engagés, et faites part de votre avis, reconnaissez les coqs comme totalement innocents.\pend\pstart\textbf{Philonicus }\hspace{1cm} Dites, je vous prie, excellents spectateurs, reconnaissez les poules comme excellentes et totalement innocentes.\pend\pstart\textbf{Euthymus }\hspace{1cm} Hélas, pourquoi gardez-vous le silence ? De cette manière en effet, comprendre quel parti est tombé ne sera pas du tout aisé.\pend\pstart\textbf{Philonicus }\hspace{1cm} Courage, allons ! Exprimez ce que vous avez à l'esprit, et donnez la conclusion de l'affaire. Cette hésitation, dans une affaire suffisamment exposée et suffisamment claire, est lassante.\pend\pstart\textbf{Euthymus }\hspace{1cm} Tu t'aperçois que tous se taisent, cependant tu vois qu'ils marmonnent, et que quelqu'un fait quelques efforts. Parce que si un seul parlait en premier, nous serions sensiblement plus nombreux à être sur le point d'écouter. Et en effet, comme ils ne pouvaient pas tous répondre, chacun attendait celui qui oserait parler le premier. Enfin, la foule a l'habitude d'être réduite à accabler et ébranler à l'envi (comme cela arrive souvent au cours d'une réunion) celui qui l'organise.\pend\pstart\textbf{Philonicus }\hspace{1cm} Moi, Nomothetes, je t’admire, écoutant attentivement avec chacun des plus avisés, avec intelligence, par grâce, tu te tais longtemps alors. Je te conjure de parler, car quelque chose de chanceux et d’heureux arrivera, à savoir que d’autres ou bien se contentent de ton avis, ou bien invités à dire ce qu’ils ont absorbé dans l’âme, ils parleront tout haut, et nous n’ignorerons pas avec les premiers ce que tu jugeras. Tu aimes, certes, comme je le sais, les poules et les Ornithoboscia ? les plus fréquentes, cette maison que tu as récemment construite aux portes de la ville les tient au chaud.\pend\pstart\textbf{Euthymus }\hspace{1cm} L’affaire est sauve. Comme Nomothetes est éloquent, il peut fournir aux autres qui sont présents, un exemple de juger de manière droite. Nomothetes, parle-moi donc et commence de manière assez chanceuse.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Parce que Philonicus me … et toi Euthymus …. ?, à tel point que je parlerai premier : vous m’exhortez à ce que j’exprime un avis ; j’estime qu’il ne faut pas se taire, car on s’occupe d’abord de rien d’autre que de notre avis et opinion surtout. Et de toutes les choses, par-dessus tout, je veux que les coqs et les poules choisissent dans votre grand débat les chapons castrés comme arbitres. Ils ne peuvent en effet être juges, alors qu’ils sont des eunuques, ce qui, selon la sanction de nos lois, si je comprends bien, a été saisi. Les juges, par Hercule le meilleur, seront pour leur amitié commune, le lien et les coutumes à l’un et l’autre pour beaucoup d’années (persprectos ?). Et ce terme aussi est plus honorable que celui-là. La charge des juges, en effet, de manière beaucoup plus calme et beaucoup plus dans les différends convenables des complices et des conjoints. (?) La sévérité des lois ne les lie pas à tel point, en effet, sans qu’on tienne beaucoup de choses pour l’avantage des parties de manière très calme. Mais la rigueur de la charge et la plainte des lois ne permettent pas qu’ils soient envoyés, si ce n’est à quelqu’un de désavantageux. En outre, il est très odieux qu’un juge qui n’est pas de notre genre soit permis. En effet, il doit fuir le juge de son ordre, les lois et la nature le promettant, il faut que, quel que soit celui qui est accusé, suive celui qui accuse. Parce que, donc, l’une et l’autre partie implore la confiance des chapons par leurs paroles (quel chemin devant les autres pour écouter doit être remarqué ? ), je supplie, quels autres sauf les chapons instituez-vous comme juges, de manière convenable ?\pend\pstart\textbf{Euthymus }\hspace{1cm} Par Hercule, je désire que cela se fasse ainsi, comme cela plaît à Nomothetes et comme cela plaît aux autres eux-mêmes qui font signe, je vois. Mais qui parmi les chapons sera le médiateur le plus approprié ?\pend\pstart\textbf{Philonicus }\hspace{1cm} Auparavant, demande si cela même plaira aux coqs et aux poules, Euthymus, ceux qui ne veulent pas n’obtiendront pas des résolutions du lieu de Nomothetes.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Allons donc, que voulez-vous scruter ?\pend\pstart\textbf{Philonicus }\hspace{1cm} Déjà, nous voulons savoir si cela plaît à Euthymus.\pend\pstart\textbf{Euthymus }\hspace{1cm} Cela me plaît beaucoup. Vous, pendant ce temps, spectateurs, spectateurs, serez d’un esprit libre et joyeux.\pend\pstart\textbf{Nomothetes }\hspace{1cm} test\pend\pstart\textbf{Philonicus }\hspace{1cm} test\pend\pstart\textbf{Euthymus }\hspace{1cm} test\pend\pstart\textbf{Philonicus }\hspace{1cm} test\pend\pstart\textbf{Nomothetes }\hspace{1cm} test\pend
+            \pstart\section*{A la veille du sabbat, voici les interlocuteurs chargés d’établir la paix: Philonicus, Euthymus, Nomothetes.}\pend\pstart\subsection*{ Philonicus Euthymus Nomothetes}\pend\pstart\textbf{Philonicus}\hspace{1cm} Jusque-là vous avez entendu, spectateurs, jeunes gens, vieillards et ceux qui se trouvent entre les deux, de ma bouche brièvement, et de celle d’Euthymus longuement et fastidieusement, ce que les poules ont réclamé, ce que les coqs ont répliqué. Ou, pour mieux dire, Euthymus a rapporté des actions que les coqs eux-mêmes ne connaissent pas et, s'ils les connaissaient, ils ne leur accorderaient aucun crédit.\pend\pstart\textbf{Euthymus }\hspace{1cm} Vous avez entendu, dis-je, Spectateurs, combien les poules ont injustement accusé, bien que d'une manière pertinente, avec des arguments clairs et des preuves plus que véridiques les coqs se sont justifiés grâce à mon intervention comme avocat.
+                        Bien qu’ils aient pensé que ce qui a été dit ou exposé par Philonicus ne serait pas dit parce qu'ils ont cru autrement à l'amour qui serait ressenti ou à la loyauté ou au mariage, ayant cependant soupçonné qu’elles considèreraient comme une injustice la plus grande partie de ces actions, ils ont médité de me proposer la charge de les justifier et de les défendre pour que je n'omette rien de ce qui paraissait concerner leur gloire.
+                        J’ai certes accompli cela en faveur du parti des mâles, plus en répondant qu’en censurant à mon tour. En effet de nombreux faits ont été délibérément passé sous silence, faits que  j'aurais j’aurais pu, en vertu de ma fonction, m’attacher à décrire avec les impétueux aiguillons de mes mots si l’immensité d’un discours qui ne faisait que grossir ne m’en avait détourné.
+                        Par conséquent, Philonicus, la faute d’irréflexion doit t’être imputée à toi plus qu’à moi celle de la longueur. Une énorme médisance peut être comprise en très peu de mots, même en cinq (six) lettres seulement. Par exemple, si je dis: “Voleur!”, l’insulte ne peut être changée ou effacée par quelques mots.
+                    \pend\pstart\textbf{Philonicus }\hspace{1cm} Souvent tu pointes chez moi la médisance à cause de mes paroles futiles, mais est-ce que ce n'est pas plutôt toi qui es futile? Tu oses sans raison dire que je suis médisant, alors que je réalise une bonne action pour la gent masculine? Vois, je t’en prie, Euthymus, et je parle en connaissance de cause: moi, crois-moi, j'entreprendrai dans un autre lieu la vengeance de ton effronterie si impudente.\pend\pstart\textbf{Euthymus }\hspace{1cm} Holà, spectateurs, ce n'est pas assez que ces faits aient été si faussement attribués aux coqs par Philonicus, s'il ne pouvait aussi satisfaire sa jalousie envers Euthymus? Menaçant lui-même, il organise déjà maintenant une autre action pour d'autres tort. Je t’en supplie, Philonicus, poursuivons sans perdre de vue les coqs et les poules afin que nous n’en arrivions pas à la lutte plus impitoyable d’une autre cause.\pend\pstart\textbf{Philonicus }\hspace{1cm} Et cela me plaît infiniment, même si je veux t’engager à te souvenir de ce que tu as dit à mon sujet. En effet, ces paroles, moi, je ne les laisserai pas passer et je ne les dépasserai pas en les considérant comme enterrées.\pend\pstart\textbf{Euthymus }\hspace{1cm} Exprimez-vous donc, spectateurs, comme vous y avez été engagés. Faites part de votre avis! Vous admettez la totale innocence des coqs.\pend\pstart\textbf{Philonicus }\hspace{1cm} Exprimez-vous, je vous prie, honnêtes spectateurs, vous admettez la totale et très grande innocence des poules.\pend\pstart\textbf{Euthymus }\hspace{1cm} Hélas, pourquoi gardez-vous le silence ? En effet, il ne sera pas aisé de comprendre ainsi lequel des deux partis aura succombé.\pend\pstart\textbf{Philonicus }\hspace{1cm} Courage, allons ! Exprimez ce que vous avez à l'esprit et mettez un terme à l’affaire! Cette hésitation, dans une affaire suffisamment exposée et suffisamment claire, est lassante.\pend\pstart\textbf{Euthymus }\hspace{1cm} Tu t'aperçois que tous se taisent. Tu vois cependant que certains marmonnent et que tentent quelque chose. Si un seul prenait la parole en premier, nous en écouterions plusieurs petit à petit. Le fait est que, comme tous ne sont pas capables de répondre, chacun attend celui qui oserait parler le premier. Enfin, le reste de la foule a l'habitude de presser à l’envie et de pousser celui qui commence,comme cela arrive souvent au cours d'une réunion.\pend\pstart\textbf{Philonicus }\hspace{1cm} Moi, je suis bien surpris que toi qui nous écoute attentivement, Nomothetes, tu te taises aussi longtemps alors que tu es semblable aux gens les plus avisés par la pertinence de tes conseils. Je te conjure de parler pour qu’arrive quelque chose d’heureux et de favorable, à savoir que les autres soit se reposent sur ton avis, soit invités à parler disent tout haut ce qu’ils ont à l’esprit et qu’en premier lieu nous n’ignorerions pas ce que tu penses. Certes, tu aimes, comme je le sais, les poules et le poulailler très peuplé, cette maison que tu as récemment construite aux portes de la ville, les tient au chaud.\pend\pstart\textbf{Euthymus }\hspace{1cm} (à part) L’affaire est sauve. Comme Nomothetes est éloquent, il peut en effet fournir aux autres qui sont présents le modèle d’une bonne manière de donner son avis. 
+                        Parle-moi donc, mon Nomothetes, et commence d’une heureuse manière.
+                    \pend\pstart\textbf{Nomothetes }\hspace{1cm} Parce que, Philonicus et toi Euthymus, vous m’exhortez à ce que j’exprime le premier à voix haute ce que je pense, j’estime qu’il ne faut pas se taire, précisément parce que notre avis n’est devancé par l’opinion de personne. 
+                        Et par-dessus tout, je voudrais précisément que les coqs et les poules choisissent comme médiateurs dans votre illustre débat les chapons castrés. 
+                        Juges, en effet, ils ne peuvent pas l’être puisqu’ils sont eunuques, ce qui a été décidé par la sanction de nos lois, si je comprends bien. 
+                        Ils seront médiateurs, par le grand Hercule, en raison de l’amitié commune qui les lie et pour avoir véritablement éprouvées les moeurs de l’un et l’autre depuis de nombreuses années. Et ce terme aussi est plus honorable que celui-là. 
+                        Le service des médiateurs est beaucoup plus doux et beaucoup plus approprié pour les tensions de voisinage ou de couple. En effet, la rigueur des lois ne les entravent pas au point qu’ils ne puissent pas régler beaucoup de conflits à l’avantage des parties avec la plus grande douceur. Mais la rigueur de la charge et la teneur des lois ne permettent pas qu’ils soient doux, si ce n'est avec un certain préjudice. En outre, il est fort déplaisant de supporter un juge qui n’est pas de notre genre. 
+                        En effet, il doit se réfugier auprès du juge de son ordre/rang, les lois et la nature l'y poussant et quiconque est accusé, il faut que celui qui l’accuse le suive. Parce que, donc, l’un et l’autre parti a imploré la protection des chapons grâce à vos paroles ce que moi j’ai remarqué avant tous les autres tout en écoutant, qui d’autre dans ces conditions que les chapons, je vous le demande, instituerez-vous comme médiateurs?
+                    \pend\pstart\textbf{Euthymus }\hspace{1cm} Par Hercule, je désire que cela se fasse ainsi, comme cela plaît à Nomothetes (à part) et comme je vois que cela plaît aux autres qui l’approuvent. 
+                        Mais qui sera le médiateur le plus approprié pour les chapons?
+                    \pend\pstart\textbf{Philonicus }\hspace{1cm} Premièrement, demande si cela plaira aux coqs et aux poules, Euthymus, si vraiment ils ne veulent pas, les plans de Nomothetes n’auront aucune valeur.\pend\pstart\textbf{Nomothetes }\hspace{1cm} Pourquoi donc ne vous enquérez-vous pas de ce qu’ils veulent?\pend\pstart\textbf{Philonicus }\hspace{1cm} Déjà, nous voulons savoir si cela plaît à Euthymus.\pend\pstart\textbf{Euthymus }\hspace{1cm} Cela me plaît beaucoup. Vous, pendant ce temps, spectateurs, vous serez d’un esprit libre et joyeux. 
+                        (Chacun va demander à ses clients s’ils acceptent l’arbitrage des chapons.)\pend\pstart\textbf{Nomothetes }\hspace{1cm} Grand dieu, moi, je vois que les chapons ont été acceptés par l’un et l’autre parti, car de part et d’autres ils ferment les yeux et manifestent leur accord par leurs paroles, mais écoutons ceux qui reviennent.\pend\pstart\textbf{Philonicus }\hspace{1cm} Les poules pensent bien s’en sortir parce qu’elles auront les chapons comme médiateurs.\pend\pstart\textbf{Euthymus }\hspace{1cm} Et les coqs pensent s’en sortir bien mieux, car les chapons ont un jour été des coqs mais jamais des poules.\pend\pstart\textbf{Philonicus }\hspace{1cm} Je t’en prie, Nomothetes, supporte la tâche de rapporter ce que les chapons veulent. Je ne connais, en effet, de nous tous aucun autre qui soit lié à eux tout en prenant du repos par une aussi grande amitié.
+                        Raconte-leur donc d’abord toute l’affaire comme tu l’as apprise et sers-toi avec zèle de l’herbe de Démocrite grâce à laquelle on comprend le discours de ces nombreux oiseaux.
+                    \pend\pstart\textbf{Nomothetes }\hspace{1cm} Avocats, parce que vous voulez qu’il soit ainsi, ainsi soit-il. 
+                        Mais il faut s’arrêter un petit instant jusqu’à ce que j’explique tout aux chapons et que j’apprenne ce qu’il faut dire en retour.
+                        Vous, pendant ce temps, spectateurs, priez les dieux d’en haut, pour que votre Nomothetes rapporte de l’assemblée des chapons de quoi faire avec bonheur la paix et la concorde d’une si grande mésentente.
+                    \pend
         \endnumbering
         \end{Rightside}
         \end{pages}
