--- a/5arbitragebilingue.tex
+++ b/5arbitragebilingue.tex
@@ -29,7 +29,7 @@
         \begin{latin}
         \begin{Leftside}
         \beginnumbering 
-            \pstart\section*{Caporum arbitrium Nomothetes interpres loquitur.\footnote{L'imprimé donne Nomotheses pour le titre.}}\pend\pstart\subsection*{Nomothetes}\pend\pstart\textbf{Nomothetes}\hspace{1cm} 
+            \pstart\section*{Caporum arbitrium Nomothetes interpres loquitur.}\pend\pstart\subsection*{Nomothetes}\pend\pstart\textbf{Nomothetes}\hspace{1cm} 
                     Recensui, ut jussistis Philonice, tuque Euthyme breviter ﻿\ampersand\ enucleate rem omnem Capis, 
                     qui nescio an alia in re \edtext{umquam}{\Afootnote{unquam}} adeo stupefacti fuerint, 
                     ac hodie fuere, postquam illam inter Gallos, Gallinae que audivere \edtext{dissensionem}{\Afootnote{dissentionem}}. 
@@ -117,7 +117,17 @@
         \begin{Rightside}
         \beginnumbering
             \pstart\section*{Arbitrage des chapons, l'interprète Nomothetes parle.}\pend\pstart\subsection*{Nomothetes}\pend\pstart\textbf{Nomothetes}\hspace{1cm} 
-                        traduction
+                        Comme vous me l’avez ordonné, toi Philonique et toi Euthyme, j’ai exposé brièvement et sans artifice toute l’affaire aux chapons dont j’ignore s’ils ont jamais été aussi ébahi dans une autre affaire qu’ils furent aujourd’hui après qu’ils eurent entendu le désaccord des coqs et des poules.
+                        Ils savent évidemment que rien n’est plus funeste qu’une guerre intestine  et que les fondements de la république dont les membres sont en désaccord avec la tête ne pourront pas tenir longtemps. Par ailleurs, l’historien amoureux de la vérité, dit que les petites choses croissent par l’harmonie et que les grandes choses s’évanouissent par la discorde. Ceci est si bien connu de vous que c'est ce qui l'est le mieux. 
+                        À cause de cela (C’est pourquoi elle ne fut pas brièvement bienvenue pour ceux-ci) , il a semblé que l’instruction devait aller avec assez de précipitation vers la modération du pouvoir autant qu’il est dangereux d’avoir davantage de choses sur soi, si elle s’était éloignée très loin, elles remercient la bonne fortune et le destin favorable parce que la liberté parvint de bon plaisir vers eux par votre accord et celui des parties. Si en effet l’affaire avait marché autrement, il semblait les craindre, pour que la faible sécurité du genre n’aie pas commis quelque chose de plus affreux que de cette sorte, (séverine) il aura osé agir, parce que personne, par hercule, n’a fait attention pour les chapons.
+
+                        En effet ce sont ceux qui poursuivent en justice et les coqs et les poules à l’aide d’une conduite égale de l’amour, et qui n’est certes pas venant des coqs parce qu’il balance entre deux choses, quelqu’un, puisque les coqs ont été à ce même individu, ce que toi Euthymus tu me disais un peu auparavant.
+                        En vérité ces indices sont en faveur des poules, parce qu’elles ont jadis choisi les mâles par un instinct commun [eas ?], elles ont réchauffé les petits dans une preuve d’amour après avoir éprouvé une envie de toucher les petits couchés en dessous, aussi s’amusant, toujours en continuant, elles aiment, tirent, nourrissent, parce que [se] le grand investigateur a amené quelque chose de la nature qui a fait ses preuves.
+                        Et puisque que c’est un fait établi que ces choses sont vraies, personne n’aura suspecté les Chapons de manière raisonnable dans la sentence de l’arbitrage, combien moi, lorsqu’ils ont ordonné, je vous dirai, spectateurs, brièvement et ouvertement après que vous avez entendu la partie des avocats.
+                        En effet plusieurs venant des Chapons plaident pour les poules et les coqs, qui ne s’indignent justement pas pour rien, après cette lutte calme, principalement pour le cas où l’affaire serait parvenue ouvertement à ces oreilles d’autres personnes de notre province : puisqu’elles sont parvenues avec certitude.
+                        Et en effet je suis déjà destiné à dire cela, qui a principalement coulé hors de l’âme de ceux-ci, que vous avez vu ici s’asseoir vers moi, qui (main)tiennent entre tous la situation de l’autorité de l’habitant suprême de notre poulailler, et ils tiennent cela dans leur mémoire, qui depuis de longues années s’est passé entre eux, et (joram) par cette prévoyance inquiétée qui sera facile, les parfumés purent, toujours, avec une longue et très honnête habitude, et par un décret libre de leur province et dans une estimation de toutes les affaires très difficiles par accord, devenir les nobles (les premiers). 
+                        (Joram) Ceux-ci donc blâmant celles qui ont abandonnée notre maison, reconnaissent naïvement, presque tous des coqs, et d’avoir fait avec empressement et application à partir des poules, et un évènement champêtre et des fortunes des ferme, (et) d’avoir augmenté de lourdes dépenses à travers celles-ci, d’être cependant, parce que
+                        
                     \pend
         \endnumbering
         \end{Rightside}
