--- a/6épiloguebilingue.tex
+++ b/6épiloguebilingue.tex
@@ -29,11 +29,11 @@
         \begin{Leftside}
         \beginnumbering 
             \pstart\section*{Lichenor parasitus, loquitur.}\pend\pstart\subsection*{Lichenor}\pend\pstart\textbf{Lichenor}\hspace{1cm} 
-                    Ehodum Spectatores, quidnam est, quod adeo dispalescitis unius hominis inepta, ﻿\ampersand\ nimis in levissima re gravi sententia saturi? 
+                    Ehodum, Spectatores! quidnam est, quod adeo dispalescitis unius hominis inepta, ﻿\ampersand\ nimis in levissima re gravi sententia saturi? 
                     numquid ﻿\ampersand\ vos quicquam estis bona Minerva, bonoque Genio his subjuncturi quae Nomothetes attulit? 
                     State paullulum   obsecro ﻿\ampersand\ quantum in multorum cosiliis frugis extet perdiscite. 
                     Vetus est sententia, Neminem unum omnia noscere, ﻿\ampersand\ hoc itidem percelebratum. 
-                    Sape etiam est olitor valde oportuna locutus. 
+                    Saepe etiam est olitor valde oportuna locutus. 
                     Parasitum me noscitis Lichenora, qui Parasitando multis iam annis ventrem pavi meum, ﻿\ampersand\ alienum cibum ceu musculus quidam semper edi, nullorum edacitate unquam victus, vestibusque ut videtis non plane sumptuosis, nec plane sordidis amictus. 
                     Qui consiliis haud quaquam malis, levi adolescentiae saepe suppetiatum affui. 
                     En ego si nemo ex vobis aliud est dicturus, quid sentiam ipse eloquar, esto non multum amplius loci mea sententia, habitura sit, propterea quod absunt partes, dicam tamen quod dicturus antea fueram, quan quam me fortassis ut hominem semissem, nihil ad rem dicere posse, existiment non nulli. 
