--- a/6épiloguebilingue.tex
+++ b/6épiloguebilingue.tex
@@ -10,6 +10,7 @@
         \usepackage[noend,series={A,B},noeledsec, noledgroup]{reledmac}
             \Xarrangement[A]{paragraph}
         \usepackage{reledpar}
+        \usepackage {lineno}
         \usepackage[a4paper]{geometry}
 	       \geometry{margin=3.5cm}
 	    \usepackage[onehalfspacing]{setspace}
@@ -29,40 +30,93 @@
         \begin{Leftside}
         \beginnumbering 
             \pstart\section*{Lichenor parasitus, loquitur.}\pend\pstart\subsection*{Lichenor}\pend\pstart\textbf{Lichenor}\hspace{1cm} 
-                    Ehodum, Spectatores! quidnam est, quod adeo dispalescitis unius hominis inepta, ﻿\ampersand\ nimis in levissima re gravi sententia saturi? 
-                    numquid ﻿\ampersand\ vos quicquam estis bona Minerva, bonoque Genio his subjuncturi quae Nomothetes attulit? 
-                    State paullulum   obsecro ﻿\ampersand\ quantum in multorum cosiliis frugis extet perdiscite. 
-                    Vetus est sententia, Neminem unum omnia noscere, ﻿\ampersand\ hoc itidem percelebratum. 
-                    Saepe etiam est olitor valde oportuna locutus. 
-                    Parasitum me noscitis Lichenora, qui Parasitando multis iam annis ventrem pavi meum, ﻿\ampersand\ alienum cibum ceu musculus quidam semper edi, nullorum edacitate unquam victus, vestibusque ut videtis non plane sumptuosis, nec plane sordidis amictus. 
-                    Qui consiliis haud quaquam malis, levi adolescentiae saepe suppetiatum affui. 
-                    En ego si nemo ex vobis aliud est dicturus, quid sentiam ipse eloquar, esto non multum amplius loci mea sententia, habitura sit, propterea quod absunt partes, dicam tamen quod dicturus antea fueram, quan quam me fortassis ut hominem semissem, nihil ad rem dicere posse, existiment non nulli. 
-                    Non enim baraba, nec pallio, nec pallore in faciem inducto Cimino, prudentiam ostento, id quod solent multi, Sed Lichenora me ﻿\ampersand\ ore ﻿\ampersand\ habitu profiteor, quid mihi abscondita, intra calviciem, ﻿\ampersand\ calvam hanc calvariam, mea mens, secum saepe mussitet, non omnibus est in aperto. 
-                    Idcirco Lichenora audite contendite, paulumque ipsi date morae, quo se a screatu liberet, ne raucus Orator appareat, Hem, hem, Ho, oho, Pfhui. 
-                    Ah male ex gutture habeo, ob hesternum acre ﻿\ampersand\ immaturum vinum, quod mihi Saturio combibo ﻿\ampersand\ convivator meus in coena dedit. 
-                    Verum vos spectatores non vocem sed verba pensabitis. 
-                    Audistis hodie, quid conductus donis animus possit, quantumque muneribus suscitatae, vires incrementi summant. 
-                    Philonicum ego his quatuor annis proximis, quibus mihi est familiaris, nunquam gravius loquentem audivi, ﻿\ampersand\ eo viso primum an Philonicus esset dubitare occoepi, Cum enim una sumus in coena, salibus me ﻿\ampersand\ lepore parasitico multo est urbanior, ﻿\ampersand\ ea ludit, quae elegans solet Pantomimus. 
-                    Cum obaeratus praemiis loquitur, talis est quem audistis.  
-                     Magnae primum artis esse mihi videtur, variare posse vultum ﻿\ampersand\, cum sapientia est opus, sapeintis pellem induere. 
-                    Euthymus ipse, paulo gravior cum domi est, ﻿\ampersand\ si me amet, non tamen levitate superat, Ast animum exhilarat meis ineptiis suum, tu inde atratos ﻿\ampersand\ bicolores codices minus moleste volvere queat, Quem heri fere hoc dicturum olfeci, quae hocide dixit, multum enim sudoris in chartis reliquerat, antequam potaret, quod si tot horis non dormiisset, perturbasset ordinem, ﻿\ampersand\ susceptis donis nequaquam fecisset satis. 
-                    Nomothetes, qui legibus suis barbatorum hominum sapientiam adnexuit, idem in Gallorum Gallinarumque lite referendum putavit, quod refertur, dum maximi principis in maxima discordia sunt, nimis in frivolis rebus studiosus. 
-                    Verum quid ego hos imprudens enumero Spectatores Si mihi non imputatum fuisset praecaeteris clamanti, hi haec verba, ut in animum venerant, pronunciassem. Gallos ﻿\ampersand\ Gallinas cum Capis, quia mihil apud eos aeris est, quo litis sumptibus satis fieri possit, in coquinarium carcerem coniiciendos existimo, ibique retinendos donec rerum omnium ambiguitas excussa pateat, Sponsio enim in tam volucri genere non est tuta. 
-                    Quod si humanos animos, mendacibus ausis, ﻿\ampersand\ insultu temerario, agitare ﻿\ampersand\ ludibrio habere visi fuerint ﻿\ampersand\ sapere velle in alieno genere videri, Censeo breviter ea poena puniendos, ut sensim eis, Pinna post pinam, ﻿\ampersand\ post plumam pluma, radicitus evellantur, prius ipsis jugulatis, ﻿\ampersand\ in bulientem aquam immersis. 
-                    Post vero in omnium Spectatorum oblectationem assentur partim ﻿\ampersand\ elixentur, partim comminutis ossibus ﻿\ampersand\ pulpis, in sapidi iusculi liquorem conterantur, quod pro salute multorum fiat, foelixque sit ﻿\ampersand\ faustum toti turbae, ﻿\ampersand\ haec quidem sunt, quae dicta volui, Qua sententia Spectatores, Multum vobis accessisset commodi, Nihil enim praeter nugas ﻿\ampersand\ nebulas Galli, Gal   linaeque, garritidarunt, adauctas causidicorum versutia, latiore suco, quorum hodie tantus clamor fuit, ut adventans ego Pharmacopolas me audire putarim. 
-                    Et profecto credidi esse aliquem, qui vivum serpentem, aut lacertam viridem, aut Araneolum voraturus esset, sed clamore falsus sum, ﻿\ampersand\ frustratus etiam ad finem meo voto, Dii perdant trepidos Parasitos, ﻿\ampersand\ ubi res postulat ad loquendum Creperos. 
-                    Iam Gallis, Gallinis, ﻿\ampersand\ Capis vesceremur. 
-                    Iam potaremus ex Symbolo, promptumque erat saginari nos maligni generis obitu. 
-                    Nec ullus nos Legirupas dicere fuisset ausus, quod rem civilem cruore clausissemus. 
-                    Nemo enim Pullis, Gallis, Gallinisque ﻿\ampersand\ Capis enectis, libentius victitat, quam hi qui penes se summum legum arbitrium locatum esse autumant. 
-                    Videte quantum neglexerimus silendo commodum, Frustra iam labia tergitis, qui angimini fame, frustra vacuum deglutitis, desiderium vestrum latius hoc in loco exaturari non potest. 
-                    Consulat igitur sibi quisque domi, ﻿\ampersand\ captivi generis faciat sibi quisque copiam, pro conditione. 
-                    Ego Euthymum adibo, quem Gallis suis domi male consulere habeo compertum, ut Philonicus quoque male Gallinis consulit. 
-                    Utrinque enim deplumantur iam, ﻿\ampersand\ ad Culinam destinantur, laetitiam facturi avidis faucibus. 
-                    Illic ego viscera distendam, ﻿\ampersand\ ut me pinguiorem Giggulirus faciat curabo. 
-                    Bibamque adeo, ut Veternosum me tota familia putet. VALETE vos. 
-                    Et post hac, si huc litigatum Galli, Gallinaeque pervenerint, quid censendum sit, me Iudice, memoriae commendate.
-                \pend 
+                        Ehodum Spectatores, quidnam est, quod adeo dispalescitis unius hominis inepta, ﻿\ampersand\ nimis in levissima re gravi sententia saturi? 
+                        numquid ﻿\ampersand\ vos quicquam estis bona Minerva, bonoque Genio his subjuncturi quae Nomothetes attulit? 
+                        State paullulum   obsecro ﻿\ampersand\ quantum in multorum \edtext{consiliis}{\Afootnote{cosiliis}} frugis \edtext{extet}{\Afootnote{exstet}} perdiscite. 
+                        Vetus est sententia, Neminem unum omnia noscere, ﻿\ampersand\ hoc itidem percelebratum. 
+                        Sape etiam est olitor valde \edtext{oportuna}{\Afootnote{opportuna}} locutus. 
+                        Parasitum me noscitis Lichenora, 
+                        qui Parasitando multis iam annis ventrem pavi meum, ﻿\ampersand\ alienum cibum ceu musculus quidam semper edi, 
+                        nullorum edacitate \edtext{unquam}{\Afootnote{umquam}} victus, 
+                        vestibusque ut videtis non plane sumptuosis, nec plane sordidis amictus. 
+                        Qui consiliis \edtext{haudquaquam}{\Afootnote{haud quaquam}} malis, levi adolescentiae saepe suppetiatum affui. 
+                        En ego si nemo ex vobis aliud est dicturus, 
+                        quid sentiam ipse eloquar, esto non multum amplius loci mea sententia, habitura sit, 
+                        propterea quod absunt partes, 
+                        dicam tamen 
+                        quod dicturus antea fueram, 
+                        \edtext{quanquam}{\Afootnote{quamquam}} me fortassis 
+                        ut hominem semissem, nihil ad rem dicere posse, existiment \edtext{non nulli}{\Afootnote{nonnulli}}. 
+                        Non enim barba, nec pallio, nec pallore in faciem inducto Cimino, prudentiam ostento, id quod solent multi, 
+                        Sed Lichenora me ﻿\ampersand\ ore ﻿\ampersand\ habitu profiteor, 
+                        quid mihi abscondita, intra calviciem, ﻿\ampersand\ calvam hanc calvariam, mea mens, secum saepe mussitet, \edtext{quod}{\Afootnote{}}non omnibus est in aperto. 
+                        Idcirco Lichenora audite contendite, paulumque ipsi date morae, quo se a screatu liberet, 
+                        ne raucus Orator appareat, Hem, hem, Ho, oho, Pfhui. 
+                        Ah male ex gutture habeo, ob hesternum acre ﻿\ampersand\ immaturum vinum, quod mihi Saturio combibo ﻿\ampersand\ convivator meus in \edtext{coena}{\Afootnote{cena}} dedit. 
+                        Verum vos spectatores non vocem sed verba pensabitis. 
+                        Audistis hodie, 
+                        quid conductus donis animus possit, 
+                        quantumque muneribus suscitatae, vires incrementi \edtext{sumant}{\Afootnote{summant}}. 
+                        Philonicum ego his \edtext{quattuor}{\Afootnote{quatuor}} annis proximis, 
+                        quibus mihi est familiaris, \edtext{nunquam}{\Afootnote{numquam}} gravius loquentem audivi, ﻿\ampersand\ eo viso primum an Philonicus esset dubitare \edtext{cocepi}{\Afootnote{occoepi}}, 
+                        Cum enim una sumus in \edtext{coena}{\Afootnote{cena}}, salibus me ﻿\ampersand\ lepore parasitico multo est urbanior, ﻿\ampersand\ ea ludit, 
+                        quae elegans solet Pantomimus. 
+                        Cum obaeratus praemiis loquitur, talis est quem audistis.  
+                         Magnae primum artis esse mihi videtur, variare posse vultum ﻿\ampersand\, cum sapientia est opus, sapeintis pellem induere. 
+                        \edtext{Euthymus}{\Afootnote{Ethymus}} ipse, paulo gravior cum domi est, ﻿\ampersand\ 
+                        si me amet, non tamen levitate superat, 
+                        Ast animum exhilarat meis ineptiis suum, tu inde atratos ﻿\ampersand\ bicolores codices minus moleste volvere queat, 
+                        Quem heri fere \edtext{haec}{\Afootnote{hac}} dicturum olfeci, 
+                        quae hocide dixit, multum enim sudoris in chartis reliquerat, 
+                        antequam potaret, 
+                        quod si tot horis non \edtext{dormisset}{\Afootnote{dormiisset}}, 
+                        perturbasset ordinem ﻿\ampersand\ susceptis donis nequaquam fecisset satis. 
+                        Nomothetes, 
+                        qui legibus suis barbatorum hominum sapientiam adnexuit, 
+                        idem in Gallorum Gallinarumque lite referendum putavit, 
+                        quod refertur, 
+                        dum maximi \edtext{principis}{\Afootnote{principes}} in maxima discordia sunt, nimis in frivolis rebus studiosus. 
+                        Verum quid ego hos imprudens enumero Spectatores? 
+                        Si mihi non imputatum fuisset \edtext{prae caeteris}{\Afootnote{praecaeteris}} clamanti, in haec verba, 
+                        ut in animum venerant, \edtext{pronuntiassem}{\Afootnote{pronunciassem}}. 
+                        Gallos ﻿\ampersand\ Gallinas cum Capis, 
+                        quia nihil apud eos aeris est, 
+                        quo litis sumptibus satis fieri possit, 
+                        in coquinarium carcerem \edtext{coniiciendos}{\Afootnote{coniciendos}} existimo, 
+                        ibique retinendos donec rerum omnium ambiguitas excussa pateat. 
+                        Sponsio enim in tam volucri genere non est tuta. 
+                        Quod si humanos animos, mendacibus ausis, ﻿\ampersand\ insultu temerario, agitare ﻿\ampersand\ ludibrio habere visi fuerint ﻿\ampersand\ sapere velle in alieno genere videri, 
+                        Censeo breviter ea poena puniendos, 
+                        ut sensim eis, Pinna post pinnam, ﻿\ampersand\ post plumam pluma, radicitus evellantur, prius ipsis jugulatis, ﻿\ampersand\ in \edtext{bullientem}{\Afootnote{bulientem}} aquam immersis. 
+                        Post vero in omnium Spectatorum oblectationem assentur partim ﻿\ampersand\ elixentur, 
+                        partim comminutis ossibus ﻿\ampersand\ pulpis, in sapidi iusculi liquorem conterantur, 
+                        quod pro salute multorum fiat, 
+                        \edtext{felixque}{\Afootnote{foelixque}} sit ﻿\ampersand\ faustum toti turbae, ﻿\ampersand\ haec quidem sunt, 
+                        quae dicta volui, 
+                        Qua sententia Spectatores, Multum vobis accessisset commodi, Nihil enim praeter nugas ﻿\ampersand\ nebulas Galli, Gal   linaeque, garritidarunt, adauctas causidicorum versutia, latiore suco, 
+                        quorum hodie tantus clamor fuit, 
+                        ut adventans ego Pharmacopolas me audire putarim. 
+                        Et profecto credidi esse aliquem, qui vivum serpentem, aut lacertam viridem, aut Araneolum voraturus esset, sed clamore falsus sum, ﻿\ampersand\ frustratus etiam ad finem meo voto, Dii perdant trepidos Parasitos, ﻿\ampersand\ ubi res postulat ad loquendum Creperos. 
+                        Iam Gallis, Gallinis, ﻿\ampersand\ Capis vesceremur. 
+                        Iam potaremus ex Symbolo, promptumque erat saginari nos maligni generis obitu. 
+                        Nec ullus nos Legirupas dicere fuisset \edtext{ausus}{\Afootnote{aufus}}, 
+                        quod rem civilem cruore clausissemus. 
+                        Nemo enim Pullis, Gallis, Gallinisque ﻿\ampersand\ Capis enectis, libentius victitat, 
+                        quam hi qui penes se summum legum arbitrium locatum esse autumant. 
+                        Videte quantum neglexerimus silendo commodum, 
+                        Frustra iam labia tergitis, qui angimini fame, frustra vacuum deglutitis, desiderium vestrum latius hoc in loco \edtext{exsaturari}{\Afootnote{exaturari}} non potest. 
+                        Consulat igitur sibi quisque domi, ﻿\ampersand\ captivi generis faciat sibi quisque copiam, pro conditione. 
+                        Ego Euthymum adibo, 
+                        quem Gallis suis domi male consulere habeo compertum, 
+                        ut Philonicus quoque male Gallinis consulit. 
+                        \edtext{Utrimque}{\Afootnote{Utrinque}} enim deplumantur iam, ﻿\ampersand\ ad Culinam destinantur, laetitiam facturi avidis faucibus. 
+                        Illic ego viscera distendam, ﻿\ampersand\ ut me pinguiorem Giggulirus faciat curabo. 
+                        Bibamque adeo, 
+                        ut Veternosum me tota familia putet. 
+                        Valete vos. 
+                        Et \edtext{posthac}{\Afootnote{post hac}}, si huc litigatum Galli, Gallinaeque pervenerint, 
+                        quid censendum sit, me Iudice, memoriae commendate.
+                    \pend 
         \endnumbering
         \end{Leftside}
         \end{latin}
